--- a/.github/workflows/seventh.yml
+++ b/.github/workflows/seventh.yml
@@ -1,12 +1,12 @@
-name: Java CI 01 own actions
+name: My Project Workflow
 
 on:
   push:
     branches:
-      - ex2
+      - main
   pull_request:
     branches:
-      - ex2
+      - main
 
 jobs:
   build:
@@ -37,3 +37,11 @@ jobs:
         run: |
           npm install -g now
           now --token $NOW_TOKEN --prod
+      - name: Send email notification
+        uses: actions/email@v3
+        with:
+          to: your_email@example.com
+          subject: Successful Deployment of My Project
+          body: The My Project workflow has successfully completed. The latest version has been deployed to the staging server.
+        env:
+          EMAIL_TOKEN: ${{ secrets.EMAIL_TOKEN }}
