--- a/.github/workflows/seventh.yml
+++ b/.github/workflows/seventh.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Set up JDK 19
+        uses: actions/setup-java@v3
+        with:
+          java-version: 19
+          distribution: adopt
       - name: Run gradle build
         run: gradle build
       - name: Run unit tests
