--- a/.github/workflows/seventh.yml
+++ b/.github/workflows/seventh.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           java-version: 19
           distribution: adopt
+          cache: maven
       - name: Run gradle build
         run: gradle build
       - name: Run unit tests
