--- a/.github/workflows/seventh.yml
+++ b/.github/workflows/seventh.yml
@@ -1,13 +1,6 @@
-name: My Project Workflow
-
-on:
-  push:
-    branches:
-      - ex1.4
-  pull_request:
-    branches:
-      - ex1.4
-
+name: Java CI 01 for compile sources
+run-name: ${{ github.actor }} runs compile sources 🚀
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,16 +10,10 @@ jobs:
       - name: Set up JDK 19
         uses: actions/setup-java@v3
         with:
-          java-version: 19
-          distribution: adopt
-          cache: maven
-      - name: Run gradle build
-        run: gradle build
-      - name: Run unit tests
-        run: gradle test
-      - name: Create JAR file
-        run: gradle jar
-      - name: Upload JAR file to GitHub Release
+          java-version: '19'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
         uses: actions/upload-artifact@v3
         with:
           name: my-project.jar
