--- a/.github/workflows/seventh.yml
+++ b/.github/workflows/seventh.yml
@@ -1,6 +1,6 @@
 name: Java CI ADAM for deploy artifacts
 run-name: ${{ github.actor }} will deploy artifacts 🚀
-on: [pull_request]
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
